[gd_scene load_steps=29 format=3 uid="uid://roeennw572p2"]

[ext_resource type="PackedScene" uid="uid://jg0ru5ss6ppw" path="res://Scenes/Mobs/Base/BasePlayer.tscn" id="1_mq7la"]
[ext_resource type="AudioStream" uid="uid://djwhsufysh1dq" path="res://Resources/Audio/PunchRandom.tres" id="3_8fokh"]
[ext_resource type="Texture2D" uid="uid://oeskymbnxvee" path="res://Textures/Mobs/Player/greytide.png" id="4_bvl14"]
[ext_resource type="AudioStream" uid="uid://eogckfs15aph" path="res://Audio/Weapon/miss.ogg" id="4_pgypf"]
[ext_resource type="AudioStream" uid="uid://c064ooavx7oy1" path="res://Audio/Abilities/Teleport.ogg" id="5_42pyi"]
[ext_resource type="Texture2D" uid="uid://1yvrhqvfqqus" path="res://Textures/Weapons/Toolbox/toolbox_inhand.png" id="8_42pyi"]
[ext_resource type="AudioStream" uid="uid://blc0o0577akc7" path="res://Audio/Weapon/Hit/smash.ogg" id="8_pgypf"]
[ext_resource type="AudioStream" uid="uid://c14ckhtbrb550" path="res://Audio/Weapon/parry.ogg" id="11_si836"]
[ext_resource type="PackedScene" uid="uid://dmokrqrpfaex0" path="res://Scenes/Projectiles/Spear.tscn" id="12_aa22f"]
[ext_resource type="Script" uid="uid://6b7bcparwq17" path="res://Components/Weapons/MeleeWeaponComponent.gd" id="12_tn3ht"]
[ext_resource type="Texture2D" uid="uid://dverpu5mv40au" path="res://Textures/Weapons/Toolbox/toolbox.png" id="13_4xc88"]
[ext_resource type="Texture2D" uid="uid://fiix6iyke3n3" path="res://Textures/Weapons/Spear/spear_inhand.png" id="13_aa22f"]
[ext_resource type="PackedScene" uid="uid://vj6mn42tufxs" path="res://Scenes/Effects/Particles/Case/ShotgunCase.tscn" id="15_lx2yc"]
[ext_resource type="PackedScene" uid="uid://8u8crosi4th3" path="res://Scenes/Projectiles/Shotgun_bullet.tscn" id="15_o6b1y"]
[ext_resource type="PackedScene" uid="uid://cowxlra6ogbp0" path="res://Scenes/Effects/Particles/ShotgunFire.tscn" id="16_w1un4"]
[ext_resource type="AudioStream" uid="uid://cenp8snm2kjdm" path="res://Audio/Weapon/Projectile/shotgun_shoot.ogg" id="17_lx2yc"]
[ext_resource type="Texture2D" uid="uid://3st8a6jvfl4i" path="res://Textures/Weapons/Shotgun/shotgun-inhand.png" id="17_w1un4"]
[ext_resource type="Texture2D" uid="uid://b60x76q21cp5u" path="res://Textures/Weapons/Shotgun/shotgun_icon.png" id="18_ger1f"]
[ext_resource type="AudioStream" uid="uid://cln64q1fo5f86" path="res://Audio/Weapon/Projectile/spear_throw.ogg" id="18_w1un4"]
[ext_resource type="AudioStream" uid="uid://2r0y32cx4e8s" path="res://Audio/Weapon/empty.ogg" id="19_kyb4y"]
[ext_resource type="Script" uid="uid://dhxtoiim76o2t" path="res://Components/Abilities/NonBinary/KickDashAbilityComponent.gd" id="20_0p1r7"]
[ext_resource type="AudioStream" uid="uid://dhwn1xi06keaf" path="res://Audio/Weapon/shotgun_insert.ogg" id="20_si836"]
[ext_resource type="Script" uid="uid://bi1gje1pfokqc" path="res://Components/Weapons/RangeWeaponComponent.gd" id="23_si836"]
[ext_resource type="Texture2D" uid="uid://c2wadc7c7e3v3" path="res://Textures/Weapons/Spear/spear.png" id="24_46s63"]
[ext_resource type="Script" uid="uid://cmonoqon5s4vx" path="res://Components/Abilities/NonBinary/DashAbilityComponent.gd" id="25_46s63"]
[ext_resource type="AudioStream" uid="uid://bxj6l4kb3ei8m" path="res://Audio/Effects/dash.ogg" id="25_hf65o"]
[ext_resource type="AudioStream" uid="uid://xbdoc0n20dn" path="res://Audio/Effects/hypospray.ogg" id="26_27vau"]
[ext_resource type="Script" uid="uid://b8d56xguabrvi" path="res://Components/Abilities/OverdoseAbilityComponent.gd" id="27_l8jtb"]

[node name="Player" instance=ExtResource("1_mq7la")]

[node name="Texture" parent="." index="2"]
texture = ExtResource("4_bvl14")

[node name="Toolbox" type="Node2D" parent="." index="6"]

[node name="Texture" type="Sprite2D" parent="Toolbox" index="0"]
visible = false
position = Vector2(0, -2)
texture = ExtResource("8_42pyi")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="CooldownTimer" type="Timer" parent="Toolbox" index="1"]
one_shot = true
ignore_time_scale = true

[node name="HealthComponent" parent="." index="7"]
ignore_time_scale = true

[node name="WeaponUserComponent" parent="." index="10" node_paths=PackedStringArray("selected_weapon")]
selected_weapon = NodePath("Spear")
timers_timescaled = false

[node name="Spear" type="Node" parent="WeaponUserComponent" index="0" node_paths=PackedStringArray("shoot_sound")]
script = ExtResource("23_si836")
projectile = ExtResource("12_aa22f")
spread_angle = 3
bullets_max_count = 1
bullets = 1
bullets_recover_count = 1
shots = null
shots_angle = null
shoot_sound = NodePath("ShootSound")
bullets_recovery_delay = 8.0
timers_timescaled = null
can_attack = null
cooldown = null
cooldown_delay = 0.0
swing_delay = 0.2
swinging = null
equipped_texture = ExtResource("13_aa22f")
icon_texture = ExtResource("24_46s63")
damage_modifier = null
self_throw_speed = null
self_throw_stop_speed = null
swing_rotation_multiplier = null
attack_rotation_multiplier = null
attack_shift_multiplier = null
metadata/_custom_type_script = "uid://bi1gje1pfokqc"

[node name="ShootSound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Spear" index="0"]
stream = ExtResource("18_w1un4")

[node name="Toolbox" type="Node" parent="WeaponUserComponent" index="1" node_paths=PackedStringArray("parry_sound", "attack_sound", "miss_sound")]
script = ExtResource("12_tn3ht")
damage = 50
parry_sound = NodePath("ParrySound")
attack_sound = NodePath("MeleeHitSound")
miss_sound = NodePath("MeleeMissSound")
parry_force = 2.0
throw_speed = 400
drop_enemy_delay = 1.0
swing_delay = 0.1
equipped_texture = ExtResource("8_42pyi")
icon_texture = ExtResource("13_4xc88")
attack_rotation_multiplier = 0.5
metadata/_custom_type_script = "uid://6b7bcparwq17"

[node name="ParrySound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Toolbox" index="0"]
stream = ExtResource("11_si836")

[node name="MeleeMissSound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Toolbox" index="1"]
stream = ExtResource("4_pgypf")

[node name="MeleeHitSound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Toolbox" index="2"]
stream = ExtResource("8_pgypf")

[node name="Shotgun" type="Node" parent="WeaponUserComponent" index="2" node_paths=PackedStringArray("shoot_sound", "empty_shoot_sound", "bullets_recover_sound")]
script = ExtResource("23_si836")
projectile = ExtResource("15_o6b1y")
spread_angle = 2
bullets_max_count = 6
bullets = 6
bullets_recover_count = 6
shots = null
shots_angle = null
case_scene = ExtResource("15_lx2yc")
shoot_sound = NodePath("ShootSound")
empty_shoot_sound = NodePath("EmptySound")
bullets_recover_sound = NodePath("BulletRecoverSound")
bullets_recovery_delay = 2.0
gun_fire_effect = ExtResource("16_w1un4")
timers_timescaled = null
can_attack = null
cooldown = null
cooldown_delay = 0.5
swing_delay = 0.0
swinging = null
equipped_texture = ExtResource("17_w1un4")
icon_texture = ExtResource("18_ger1f")
damage_modifier = null
self_throw_speed = 500
self_throw_stop_speed = null
swing_rotation_multiplier = 0.0
attack_rotation_multiplier = -0.6
attack_shift_multiplier = -0.7
metadata/_custom_type_script = "uid://bi1gje1pfokqc"

[node name="ShootSound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Shotgun" index="0"]
stream = ExtResource("17_lx2yc")

[node name="EmptySound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Shotgun" index="1"]
stream = ExtResource("19_kyb4y")

[node name="BulletRecoverSound" type="AudioStreamPlayer2D" parent="WeaponUserComponent/Shotgun" index="2"]
stream = ExtResource("20_si836")

[node name="WeaponTexture" parent="." index="11"]
use_parent_material = true
texture = ExtResource("13_aa22f")
region_enabled = true

[node name="PlayerWeaponUserComponent" parent="." index="12" node_paths=PackedStringArray("weapon_1", "weapon_2", "weapon_3")]
weapon_1 = NodePath("../WeaponUserComponent/Toolbox")
weapon_2 = NodePath("../WeaponUserComponent/Shotgun")
weapon_3 = NodePath("../WeaponUserComponent/Spear")

[node name="AnimationComponent" parent="." index="14"]
ignore_time_scale = true

[node name="KickDashAbilityComponent" type="Node" parent="." index="15" node_paths=PackedStringArray("kick_weapon", "target_clear_timer", "can_teleport_timer", "teleport_sound")]
script = ExtResource("20_0p1r7")
kick_weapon = NodePath("Kick")
target_clear_timer = NodePath("TargetClearTimer")
can_teleport_timer = NodePath("CanTeleportTimer")
teleport_sound = NodePath("../Sounds/Teleport")
metadata/_custom_type_script = "uid://dhxtoiim76o2t"

[node name="Kick" type="Node" parent="KickDashAbilityComponent" index="0" node_paths=PackedStringArray("parry_sound", "attack_sound", "miss_sound")]
script = ExtResource("12_tn3ht")
damage = 40
parry_sound = NodePath("ParrySound")
attack_sound = NodePath("MeleeHitSound")
miss_sound = NodePath("MeleeMissSound")
parry_force = 1.5
throw_speed = 500
drop_enemy_delay = 1.0
cooldown_delay = 2.0
swing_delay = 0.0
attack_rotation_multiplier = 0.5
metadata/_custom_type_script = "uid://6b7bcparwq17"

[node name="MeleeMissSound" type="AudioStreamPlayer2D" parent="KickDashAbilityComponent/Kick" index="0"]
stream = ExtResource("4_pgypf")

[node name="MeleeHitSound" type="AudioStreamPlayer2D" parent="KickDashAbilityComponent/Kick" index="1"]
stream = ExtResource("3_8fokh")

[node name="ParrySound" type="AudioStreamPlayer2D" parent="KickDashAbilityComponent/Kick" index="2"]
stream = ExtResource("11_si836")

[node name="CanTeleportTimer" type="Timer" parent="KickDashAbilityComponent" index="1"]
one_shot = true
ignore_time_scale = true

[node name="TargetClearTimer" type="Timer" parent="KickDashAbilityComponent" index="2"]
one_shot = true
ignore_time_scale = true

[node name="Teleport" type="AudioStreamPlayer2D" parent="Sounds" index="0"]
stream = ExtResource("5_42pyi")

[node name="DashSound" type="AudioStreamPlayer2D" parent="Sounds" index="1"]
stream = ExtResource("25_hf65o")
max_polyphony = 3

[node name="OverdoseRefuel" type="AudioStreamPlayer2D" parent="Sounds" index="3"]
stream = ExtResource("26_27vau")
max_polyphony = 3

[node name="DashAbilityComponent" type="Node" parent="." index="18" node_paths=PackedStringArray("dash_sound", "overdose_refuel_sound")]
script = ExtResource("25_46s63")
dash_sound = NodePath("../Sounds/DashSound")
overdose_refuel_sound = NodePath("../Sounds/OverdoseRefuel")
trail_colors = Array[Color]([Color(0.9866392, 0, 0.3066764, 1), Color(0.8036335, 0.0022644557, 0.98781973, 1)])
metadata/_custom_type_script = "uid://cmonoqon5s4vx"

[node name="OverdoseAbilityComponent" type="Node" parent="." index="20"]
script = ExtResource("27_l8jtb")
trail_colors = Array[Color]([Color(0.8736105, 0, 0.34971508, 1), Color(0, 0.49991995, 0.47274232, 1), Color(0.5611145, 0.44604957, 0, 1)])
ability_delay = 3.0
metadata/_custom_type_script = "uid://b8d56xguabrvi"

[connection signal="timeout" from="Toolbox/CooldownTimer" to="Toolbox" method="_on_cooldown_timer_timeout"]
